# uma_vi_tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: associate.hpp  decimate.hpp  io.hpp  statistics.hpp  string.hpp
include/colmap/: math.hpp
python/: evaluate.py  rosbagCreator.py
src/: evaluate.cpp  tum2asl.cpp
